@@ -36,7 +36,7 @@
 #define MOD_VERSION			GetModVersion()
 //#define MOD_VERSION_MJR		0
 //#define MOD_VERSION_MIN		1
-#define MOD_VERSION_BUILD	L"20130601"
+#define MOD_VERSION_BUILD	L"20130705"
 // has to be changed on lang updates - also remember to recreate and upload the new lang files :)
 #define MOD_LANG_VERSION	1
 CString GetModVersionNumber();
