@@ -195,8 +195,13 @@ Legend:    + added    ~ changed    - removed    ! fixed    > updated
 + added kMule client icon [WiZaRd]
 ~ replaced SevenZip++ by 7z console code to allow extraction of non-7z/zip archives [WiZaRd]
 
-XXXXYYZZ:
+20130705:
 ! fixed missing "Translated by" label - thx to THOR [WiZaRd]
 ! fixed wrong client icons - thx to SS1900 [WiZaRd]
 ! fixed (wrong) disabled 7z controls [WiZaRd]
 ~ added .apk support [Tuxman]
+! fixed possibly buffer overflow in statistics - thx to RejZoR [WiZaRd]
+! switched "compatible" and "default" client icons [WiZaRd]
+! fixed crash on automatic extraction - thx to satanius [WiZaRd]
+
+XXXXYYZZ:
